<resources>
    <string name="in_this_area">Around here - Swipe up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup">Don\'t have an account yet? Sign Up</string>
    <string name="incidents">Incidents</string>
    <string name="trending">Trending</string>
    <string name="create_incident">Create Incident</string>
    <string name="alerts">Alerts</string>
    <string name="profile">Profile</string>
    <string name="rationale_location">Please enable location permission for map features</string>
    <string name="error_login_email_password">Incorrect Email or Password</string>
    <string name="error_add_incident">Error Adding Incident</string>
    <string name="comments">Comments</string>
    <string name="updates">Updates</string>
    <string name="comments_tab_text">COMMENTS (%s)</string>
    <string name="empty_text_comments">No comments so far</string>
    <string name="rationale_camera">Please enable camera to create incidents</string>
    <string name="incident_photo">Incident Photo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="error_incident_title">Enter a valid title</string>
    <string name="error_incident_description">Enter a valid description</string>
    <string name="rationale_storage">VIU needs Read Permission to create Incidents</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_signup">Sign Up</string>
    <string name="error_user_already_exists">The entered username already exists</string>
    <string name="error_wrong_password_confirmation">Wrong password confirmation</string>
    <string name="incident_video">Incident Video</string>
    <string name="take_photo">Upload photo</string>
    <string name="pick_photo">Pick a Photo</string>
    <string name="take_video">Upload video</string>
    <string name="pick_video">Pick a Video</string>
    <string name="add_comment">Add a comment…</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="emoji_fearfull">😨</string>
    <string name="emoji_hands">🙏</string>
    <string name="emoji_angry">😡</string>
    <string name="emoji_heart">❤️</string>
    <string name="close">Close</string>
    <string name="more">More</string>
    <string name="friends">Friends</string>
    <string name="make_my_account_private">Make my account private</string>
    <string name="add_friends">Add Friends</string>
    <string name="support_center">Support Center</string>
    <string name="app_settings">App Settings</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="anonymous">Anonymous</string>
    <string name="support_subject">VIU - SUPPORT CENTER - The user %s needs support</string>
    <string name="share">Share</string>
    <string name="how_it_works">How does it work?</string>
    <string name="tutorial_incident_text_1">Did you come across an incident and want to share it?</string>
    <string name="tutorial_incident_text_2">Broadcast live and alert the neighborhood</string>
    <string name="tutorial_incident_text_3">Stay safe and contribute to your community</string>
    <string name="start_live_streaming">Start live streaming</string>
    <string name="upload_an_incident">Upload an incident</string>
    <string name="rationale_broadcast">VIU needs Record Audio, Camera and Storage Permission to broadcast Incidents.</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="beautify">Beautify</string>
    <string name="mute_audio">Mute Audio</string>
    <string name="camera_off">Camera Off</string>
    <string name="leave">Leave</string>
    <string name="broadcasting">Broadcasting</string>
    <string name="viewing">Is broadcasting</string>
    <string name="live">Live</string>
    <string name="about_to_start_your_streaming">Your about to start your streaming</string>
    <string name="about_to_start_description">Please, consider to add a title and description about you are viewing and sharing.</string>
    <string name="description_optional">Description (optional)</string>
    <string name="start_now">Start now</string>
    <string name="live_broadcasting_incident_title">Live streaming</string>
    <string name="live_broadcasting_incident_description">Transmitted live</string>
    <string name="broadcast_ended_title">Your streaming has ended</string>
    <string name="broadcast_ended_description">Thanks for sharing and help the community.\nStay safe</string>
    <string name="broadcast_ended_action">Create new incident</string>
    <string name="broadcast_ended_sub_action">Back to home</string>
    <string name="broadcast_stoped_hq_title">Your streaming failed</string>
    <string name="broadcast_stoped_hq_description">Your recent streaming doesn’t complain with our policy and agreements.</string>
    <string name="broadcast_stoped_hq_action">Back to home</string>
    <string name="empty_text_trending_incidents">There are no live incidents.</string>
    <string name="broadcast_ended_viewer_title">The live broadcast has ended.</string>
    <string name="broadcast_ended_viewer_description">The broadcaster has ended his transmission or has lost connectivity.</string>
    <string name="broadcast_ended_viewer_action">Close</string>
    <string name="place_not_allowed_title">This place is not available</string>
    <string name="place_not_allowed_description">You are not allowed to post an incident\nfrom your region.</string>
    <string name="title_hint">Give a title to your incident</string>
    <string name="description_hint">Tell us what it\'s happening</string>
    <string name="multimedia">Multimedia</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_video">Add Video</string>
    <string name="map">Map</string>
    <string name="open_camera">Open camera</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="incident_created_title">You created an incident</string>
    <string name="incident_created_description">Thanks for sharing and helping the community.\nStay safe.</string>
    <string name="incident_created_action">See incident</string>
    <string name="uploading_media">Uploading media</string>
    <string name="location_disabled">The location is disabled. Please enable it and restart the App.</string>

    <string name="category_picker_title">Choose incident type</string>
    <string name="user_already_joined_title">You are logged in on another device</string>
    <string name="user_already_joined_description">It looks like you already joined this channel with another device.</string>
    <string name="datetime">Date</string>
    <string name="datetime_hint">Incident date and time</string>
    <string name="report_comment">Report Comment</string>
    <string name="updated">Updated</string>
    <string name="occurred_on">Occurred on</string>
    <string name="rate_title">Do you like this app?</string>
    <string name="rate_app_positive">😄</string>
    <string name="rate_app_negative">😠</string>
    <string name="thanks">Thanks!</string>
    <string name="forgot_password_subject">VIU - FORGOT PASSWORD - The user %s forgot his password.</string>
    <string name="forgot_password_body">VIU - FORGOT PASSWORD - Please assist the user %s to recover his password.</string>
    <string name="video_file_size_too_big">The video file is bigger than 100 MB (%s MB)</string>
    <string name="no_internet">No internet connection</string>
    <string name="empty_text_notifications">No notifications</string>
    <string name="notifications">Notifications</string>
    <string name="received_on">Received on</string>
    <string name="incident_not_exists">The incident has been deleted or finished.</string>
    <string name="error_password_too_long">Password too long</string>
    <string name="error_password_too_short">Password too short</string>
    <string name="error_empty_last_name">Empty last name</string>
    <string name="error_empty_name">Empty name</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_empty_name_or_last_name">Last name or name empty</string>
    <string name="error_generic">Last name or name empty. Password too long or too short.</string>
    <string name="error_description_too_long">Description too long</string>
    <string name="stock_by_user">Stock By User</string>
    <string name="products">Products</string>
</resources>
