<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/remove_photo"
        android:icon="@drawable/ic_close"
        android:iconTint="@color/colorWhite"
        android:title="@string/remove_photo"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/take_photo"
        android:title="@string/take_photo"
        app:showAsAction="never" />
    <item
        android:id="@+id/pick_photo"
        android:title="@string/pick_photo"
        app:showAsAction="never" />
    <item
        android:id="@+id/take_video"
        android:title="@string/take_video"
        app:showAsAction="never" />
    <item
        android:id="@+id/pick_video"
        android:title="@string/pick_video"
        app:showAsAction="never" />
</menu>