<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/stock_by_user_graph"
        android:icon="@drawable/selector_bottom_incidents"
        android:title="@string/stock_by_user" />
    <!--<item
        android:id="@+id/incidents_graph"
        android:icon="@drawable/selector_bottom_incidents"
        android:title="@string/incidents" />-->
    <item
        android:id="@+id/trending_graph"
        android:icon="@drawable/selector_bottom_feed"
        android:title="@string/trending" />
    <item
        android:id="@+id/add_incident_graph"
        android:icon="@drawable/selector_bottom_add"
        android:title="@string/create_incident" />
    <item
        android:id="@+id/notifications_graph"
        android:icon="@drawable/selector_bottom_alerts"
        android:title="@string/notifications" />
    <item
        android:id="@+id/profile_graph"
        android:icon="@drawable/selector_bottom_profile"
        android:title="@string/profile" />
</menu>