<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_incident_live_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardForegroundColor="@color/transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fill_popup_media_window"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            style="@style/TextAddress"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/rate_title"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fill_popup_media_window"
            android:orientation="horizontal"
            android:paddingTop="24dp">

            <TextView
                android:id="@+id/positive"
                style="@style/EmojiTextStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/rate_app_positive"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/negative"
                style="@style/EmojiTextStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/rate_app_negative"
                android:textSize="32sp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>